--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "townblaster",
   "version": "0.1.0",
   "private": true,
+  "engines" : {
+    "npm" : ">=7.0.0 <9.0.0",
+    "node" : ">=14.17.0 <=14.17.0"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
