--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "townblaster",
   "version": "0.1.0",
   "private": true,
-  "engines" : {
-    "npm" : ">=7.0.0 <9.0.0",
-    "node" : ">=14.17.0 <=14.17.0"
+  "engines": {
+    "npm": ">=7.0.0 <9.0.0",
+    "node": ">=14.17.0 <=14.17.0"
   },
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -15,6 +15,7 @@
     "@metamask/detect-provider": "^1.2.0",
     "axios": "^0.21.4",
     "core-js": "^3.6.5",
+    "fibers": "^5.0.3",
     "vue": "2.6.14",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
